--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,11 +20,14 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Dependencies - Eigen3, gmp, boost, bliss
+      run: sudo apt install libeigen3-dev uuid-dev libboost-system1.71-dev libboost-program-options1.71-dev libboost-test1.71-dev libboost-timer1.71-dev libboost-chrono1.71-dev libboost-serialization1.71-dev libbliss-dev
+
     - name: Dependencies - CArL
-      run:  git clone https://github.com/ths-rwth/carl && cd carl &&  git checkout 3b0c79a68a && mkdir build && cd build &&  cmake .. && make carl -j$(nproc)
+      run:  git clone https://github.com/ths-rwth/carl && cd carl &&  git checkout 3b0c79a68a && mkdir build && cd build &&  cmake .. && make carl -j $(nproc)
     
     - name: Dependencies - HyPro
-      run: git clone https://github.com/hypro/hypro && cd hypro && mkdir build && cd build && cmake .. && make hypro -j$(nproc)
+      run: git clone https://github.com/hypro/hypro && cd hypro && mkdir build && cd build && cmake .. && make hypro -j $(nproc)
       
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
