--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,11 +23,31 @@ jobs:
     - name: Dependencies - Eigen3, gmp, boost, bliss
       run: sudo apt install libeigen3-dev uuid-dev libboost-system1.71-dev libboost-program-options1.71-dev libboost-test1.71-dev libboost-timer1.71-dev libboost-chrono1.71-dev libboost-serialization1.71-dev libbliss-dev
 
-    - name: Dependencies - CArL
+    - name: Cache dependencies
+      id: cache-dependencies
+      uses: actions/cache@v3
+      with:
+          path: ${{runner.workspace}}/dependencies
+          key: ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-
+
+    
+    - if: ${{ steps.cache-dependencies.outputs.cache-hit != 'true' }}
+      name: Create Dependencies Environment
+      shell: bash
+      working-directory: ${{runner.workspace}}
+      run: cmake -E make_directory ${{runner.workspace}}/dependencies
+
+    - if: ${{ steps.cache-dependencies.outputs.cache-hit != 'true' }}
+      name: Dependencies - CArL
+      working-directory: ${{runner.workspace}}/dependencies
       run:  git clone https://github.com/ths-rwth/carl && cd carl &&  git checkout 3b0c79a68a && mkdir build && cd build &&  cmake .. && make carl -j $(nproc)
     
-    - name: Dependencies - HyPro
-      run: git clone https://github.com/hypro/hypro && cd hypro && mkdir build && cd build && cmake .. && make hypro -j $(nproc)
+    - if: ${{ steps.cache-dependencies.outputs.cache-hit != 'true' }}
+      name: Dependencies - HyPro
+      working-directory: ${{runner.workspace}}/dependencies
+      run: git clone https://github.com/hypro/hypro && cd hypro &&  git checkout alpha && mkdir build && cd build && cmake .. && make hypro -j $(nproc)
       
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
