--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,6 @@ set(CMAKE_CXX_STANDARD 17)
 add_subdirectory(src/linearization)
 add_subdirectory(src/tool)
 add_subdirectory(dependencies)
+
+enable_testing()
+add_subdirectory(test)
