--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,10 +57,10 @@ jobs:
       working-directory: ${{runner.workspace}}/dependencies/hypro
       run: mkdir -p build && cd build && cmake .. && make hypro -j $(nproc)
 
-    - name: Configure CMake
+    - name: Configure cmake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCOVERAGE=ON
 
     - name: Build
       # Build your program with the given configuration
@@ -71,4 +71,8 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
+
+    - name: Upload coverage
+      working-directory: ${{github.workspace}}/build
+      run: curl -Os https://uploader.codecov.io/latest/linux/codecov && chmod +x codecov && ./codecov
       
