invoke production of coverage reports

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,6 +72,10 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
 
+    - name: Produce coverage reports
+      working-directory: ${{github.workspace}}/build
+      run: make linearization_coverage
+
     - name: Upload coverage
       working-directory: ${{github.workspace}}/build
       run: curl -Os https://uploader.codecov.io/latest/linux/codecov && chmod +x codecov && ./codecov
