mcpp-wrapper class structure

--- a/src/linearization/CMakeLists.txt
+++ b/src/linearization/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(linearization SHARED library.cpp)
+add_library(linearization SHARED library.cpp mcpp/mcCormick.cpp include/mcpp/mcCormick.h)
 target_include_directories(linearization PUBLIC include)
