--- a/src/linearization/CMakeLists.txt
+++ b/src/linearization/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_library(linearization SHARED library.cpp mcpp/mcCormick.cpp include/mcpp/mcCormick.h)
 target_include_directories(linearization PUBLIC include)
+target_link_libraries(linearization PUBLIC utility)
