update cmake setup for analysis library
Signed-off-by: Stefan Schupp <stefan.schupp@tuwien.ac.at>

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -7,6 +7,8 @@ find_package(hypro CONFIG REQUIRED)
 if (${hypro_FOUND})
     message(STATUS "HyPro found")
     target_link_libraries(linearization PUBLIC hypro-shared)
+    target_link_libraries(analysis INTERFACE hypro-shared)
+    target_include_directories(analysis INTERFACE ${hypro_INCLUDE_DIR})
 endif ()
 
 include(mc++.cmake)
