update utility sublibrary
Signed-off-by: Stefan Schupp <stefan.schupp@tuwien.ac.at>

--- a/src/utility/CMakeLists.txt
+++ b/src/utility/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_library(utility INTERFACE)
-target_include_directories(utility INTERFACE include/)
+target_include_directories(utility INTERFACE include)
