fix test and coverage targets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,5 +17,5 @@ add_subdirectory(test)
 if (COVERAGE)
     message(STATUS "Producing test coverage report")
     include(CodeCoverage)
-    setup_target_for_coverage_gcovr_xml(NAME ${PROJECT_NAME}_coverage EXECUTABLE gtest_test)
+    setup_target_for_coverage_gcovr_xml(NAME ${PROJECT_NAME}_coverage EXECUTABLE analysis_test)
 endif ()
