--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,12 +1,1 @@
-add_executable(
-        analysis_test
-        analysis/test_analysis.cpp
-)
-target_link_libraries(
-        analysis_test
-        analysis
-        GTest::gtest_main
-)
-
-include(GoogleTest)
-gtest_discover_tests(analysis_test)
+add_subdirectory(analysis)
