--- a/src/linearization/CMakeLists.txt
+++ b/src/linearization/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(linearization SHARED library.cpp)
 target_include_directories(linearization PUBLIC include)
-target_link_libraries(linearization PUBLIC utility)
+target_link_libraries(linearization PUBLIC utility spdlog)
