--- a/src/analysis/CMakeLists.txt
+++ b/src/analysis/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(analysis INTERFACE)
 target_include_directories(analysis INTERFACE include)
-target_link_libraries(analysis INTERFACE utility)
+target_link_libraries(analysis INTERFACE utility linearization)
