--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,17 +60,17 @@ jobs:
     - name: Configure cmake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=DEBUG -DCOVERAGE=ON
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Debug -DCOVERAGE=ON
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config DEBUG --target all
+      run: cmake --build ${{github.workspace}}/build --config Debug --target all
 
     - name: Test
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C DEBUG
+      run: ctest -C Debug
 
     - name: Produce coverage reports
       working-directory: ${{github.workspace}}/build
