add reference to token for coverage
Signed-off-by: Stefan Schupp <stefan.schupp@tuwien.ac.at>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,4 +78,4 @@ jobs:
 
     - name: Upload coverage
       working-directory: ${{github.workspace}}/build
-      run: curl -Os https://uploader.codecov.io/latest/linux/codecov && chmod +x codecov && ./codecov
+      run: curl -Os https://uploader.codecov.io/latest/linux/codecov && chmod +x codecov && ./codecov -t ${CODECOV_TOKEN}
