add codecov config file and dbg output
Signed-off-by: Stefan Schupp <stefan.schupp@tuwien.ac.at>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,7 +74,7 @@ jobs:
 
     - name: Produce coverage reports
       working-directory: ${{github.workspace}}/build
-      run: make linearization_coverage
+      run: make linearization_coverage && cat linearization_coverage.xml
 
     - name: Upload coverage
       working-directory: ${{github.workspace}}/build
