fix: use lcov instead of gcov
Signed-off-by: Stefan Schupp <stefan.schupp@tuwien.ac.at>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,5 +17,6 @@ add_subdirectory(test)
 if (COVERAGE)
     message(STATUS "Producing test coverage report")
     include(CodeCoverage)
-    setup_target_for_coverage_gcovr_xml(NAME ${PROJECT_NAME}_coverage EXECUTABLE analysis_test)
+    append_coverage_compiler_flags()
+    setup_target_for_coverage_lcov(NAME ${PROJECT_NAME}_coverage EXECUTABLE ctest)
 endif ()
