--- a/src/linearization/CMakeLists.txt
+++ b/src/linearization/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(linearization SHARED uniformRandom.cpp library.cpp)
+add_library(linearization SHARED uniformRandom.cpp)
 target_include_directories(linearization PUBLIC include)
 target_link_libraries(linearization PUBLIC utility spdlog)
