start setting up documentation
Signed-off-by: Stefan Schupp <stefan.schupp@tuwien.ac.at>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(linearization VERSION 0.0.2)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 option(COVERAGE "Enable to produce coverage reports" OFF)
+option(BUILD_DOC "Build a doxygen documentation" OFF)
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
@@ -15,6 +16,9 @@ add_subdirectory(src/utility)
 add_subdirectory(src/tool)
 # add last, as the dependencies need to be linked to existing targets, which get defined in the previous includes
 add_subdirectory(dependencies)
+if (BUILD_DOC)
+    add_subdirectory(doc)
+endif ()
 
 enable_testing()
 add_subdirectory(test)
