--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -4,7 +4,7 @@ name: Deploy static content to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: [ "documentation" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -21,8 +21,18 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  dependencies:
+    steps:
+      - name: aptitude
+        run: sudo apt install libeigen3-dev uuid-dev libboost-system1.71-dev libboost-program-options1.71-dev libboost-test1.71-dev libboost-timer1.71-dev libboost-chrono1.71-dev libboost-serialization1.71-dev libbliss-dev doxygen
+
+      - name: cmake
+        working-directory: ${{github.workspace}}
+        run: mkdir build && cd build && cmake .. -DBUILD_DOC=ON
+
   # Single deploy job since we're just deploying
   deploy:
+    needs: dependencies
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -32,11 +42,14 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v2
+      - name: run doxygen
+        working-directory: ${{github.workspace}}/build
+        run: doxygen doc/config
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: '.'
+          path: 'build/doc/html'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
