--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -20,19 +20,8 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
-jobs:
-  dependencies:
-    steps:
-      - name: aptitude
-        run: sudo apt install libeigen3-dev uuid-dev libboost-system1.71-dev libboost-program-options1.71-dev libboost-test1.71-dev libboost-timer1.71-dev libboost-chrono1.71-dev libboost-serialization1.71-dev libbliss-dev doxygen
-
-      - name: cmake
-        working-directory: ${{github.workspace}}
-        run: mkdir build && cd build && cmake .. -DBUILD_DOC=ON
-
   # Single deploy job since we're just deploying
   deploy:
-    needs: dependencies
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -42,6 +31,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v2
+      - name: aptitude
+        run: sudo apt install doxygen
+      - name: cmake
+        working-directory: ${{github.workspace}}
+        run: mkdir build && cd build && cmake .. -DBUILD_DOC=ON
       - name: run doxygen
         working-directory: ${{github.workspace}}/build
         run: doxygen doc/config
