update github action
Signed-off-by: Stefan Schupp <stefan.schupp@tuwien.ac.at>

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -20,6 +20,7 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
+jobs:
   # Single deploy job since we're just deploying
   deploy:
     environment:
