update github action
Signed-off-by: Stefan Schupp <stefan.schupp@tuwien.ac.at>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,20 +12,20 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 if (BUILD_DOC)
     add_subdirectory(doc)
-endif ()
+else ()
+    add_subdirectory(src/analysis)
+    add_subdirectory(src/linearization)
+    add_subdirectory(src/utility)
+    add_subdirectory(src/tool)
+    add_subdirectory(dependencies)
 
-add_subdirectory(src/analysis)
-add_subdirectory(src/linearization)
-add_subdirectory(src/utility)
-add_subdirectory(src/tool)
-add_subdirectory(dependencies)
+    enable_testing()
+    add_subdirectory(test)
 
-enable_testing()
-add_subdirectory(test)
-
-if (COVERAGE)
-    message(STATUS "Producing test coverage report")
-    include(CodeCoverage)
-    append_coverage_compiler_flags()
-    setup_target_for_coverage_lcov(NAME ${PROJECT_NAME}_coverage EXECUTABLE ctest)
+    if (COVERAGE)
+        message(STATUS "Producing test coverage report")
+        include(CodeCoverage)
+        append_coverage_compiler_flags()
+        setup_target_for_coverage_lcov(NAME ${PROJECT_NAME}_coverage EXECUTABLE ctest)
+    endif ()
 endif ()
