add example subfolder and cmake setup for examples
Signed-off-by: Stefan Schupp <stefan.schupp@tuwien.ac.at>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,8 @@ else ()
     enable_testing()
     add_subdirectory(test)
 
+    add_subdirectory(examples)
+
     if (COVERAGE)
         message(STATUS "Producing test coverage report")
         include(CodeCoverage)
